04 - 02 Build timeline in a Webpage

--- a/ch2-timeline/css/style.css
+++ b/ch2-timeline/css/style.css
@@ -25,6 +25,7 @@ body {
     transform-style: preserve-3d;
     color: #ffffff;
     font-family: ASAP;
+    overflow: hidden;
 }
 
 .controlButtons {
