--- a/ch2-timeline/css/style.css
+++ b/ch2-timeline/css/style.css
@@ -68,7 +68,12 @@ body {
     height: 100px;
     max-width: 800px;
     text-align: center;
+    top: -150px;
+    position: relative;
+}
 
+.content-holder .tools .tool {
+    position: relative;
 }
 
 .content-holder .tools img {
@@ -96,12 +101,14 @@ body {
 }
 
 .gsapTitle .superman img{
+    position: relative;
     width: 25%;
+    left: -70%;
 }
 
 .gsapTitle .mainTitle{
     position: relative;
-    right: -50px;
+    /*right: -50px;*/
     margin-top: -90px;
 }
 
